[package]
name = "Redox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
rand_distr = "0.4.0"
rand_xorshift = "0.3.0"
ndarray = { version = "0.14.0", features = ["serde", "approx"] }
rayon = "1.0"
libc = "0.2"
matrixmultiply = "0.2.2"
num-traits = "0.2"
num = "0.3"
rustc-hash = "1.0.1"
smallvec = "1.2.0"
uuid = { version = "0.8", features = ["v4"] }
serde = "1.0.120"
serde_derive = "1.0.120"
serde_json = "1.0"
approx = "0.4.0"
special = "0.8.1"
# -- blas deps
blas-src = { version = "0.8", optional = true, default-features = false }
intel-mkl-src = { version = "0.5", optional = true, default-features = false }
cblas-sys = { version = "0.1.4", optional = true, default-features = false }


[features]
mkl = ["intel-mkl-src"]

[lib]
name = "autograd"
path = "src/lib.rs"